grammar/rail.ebnf
# Rail Language Grammar (EBNF)
# Derived from the self-hosting compiler's parser (tools/compile.rail)
# For use with grammar-constrained LLM decoding (XGrammar/Outlines)
# Refreshed 2026-07-08 against v5.3.0 (multi-arg lambdas, match guards,
# import-as, current reserved-word list).

program     = { declaration } ;
declaration = import_decl | type_decl | foreign_decl | func_decl ;

# Imports (path string or bare module name, optional qualifier)
import_decl = "import" ( STRING | IDENT ) [ "as" IDENT ] ;

# Type declarations (ADTs)
type_decl   = "type" IDENT "=" { "|" IDENT { IDENT } } ;

# Foreign function declarations (FFI)
foreign_decl = "foreign" IDENT { IDENT } [ "->" IDENT ] ;

# Function declarations
func_decl   = IDENT { IDENT } "=" expr ;

# Expressions (ordered by precedence, low to high)
expr        = let_expr | if_expr | match_expr | pipe_expr ;

let_expr    = "let" ( IDENT | "(" IDENT { "," IDENT } ")" ) "=" expr NEWLINE expr ;
if_expr     = "if" expr "then" expr "else" expr ;
match_expr  = "match" expr { "|" pattern [ "if" expr ] "->" expr } ;

pipe_expr   = or_expr { "|>" or_expr } ;
or_expr     = and_expr { "||" and_expr } ;
and_expr    = cmp_expr { "&&" cmp_expr } ;
cmp_expr    = add_expr [ ( "==" | "!=" | "<" | ">" | "<=" | ">=" ) add_expr ] ;
add_expr    = mul_expr { ( "+" | "-" ) mul_expr } ;
mul_expr    = app_expr { ( "*" | "/" | "%" ) app_expr } ;
app_expr    = atom { atom } ;

atom        = INT | FLOAT | STRING | IDENT | "true" | "false" | "null"
            | "(" expr { "," expr } ")"
            | "[" [ expr { "," expr } ] "]"
            | lambda ;

# Lambdas take one or more parameters (multi-arg since v5.3.0 / PR #33)
lambda      = "\\" IDENT { IDENT } "->" expr ;

# Match patterns (constructor + binders, or wildcard); guards use "if"
pattern     = IDENT { IDENT } | "_" ;

# Tokens
INT         = DIGIT { DIGIT } ;
FLOAT       = DIGIT { DIGIT } "." DIGIT { DIGIT } ;
STRING      = '"' { CHAR | ESCAPE } '"' ;
IDENT       = ( ALPHA | "_" ) { ALPHA | DIGIT | "_" } ;
NEWLINE     = "\n" ;

DIGIT       = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
ALPHA       = "a" .. "z" | "A" .. "Z" ;
ESCAPE      = "\\" ( "n" | "t" | "\\" | '"' | "{" | "}" ) ;
CHAR        = ? any character except '"' and '\\' ? ;

# Comments
COMMENT     = "--" { ? any character except newline ? } NEWLINE ;

# Keywords (reserved by the lexer — kw_list in tools/compile.rail; some,
# like the effect family, are reserved ahead of surface syntax)
KEYWORD     = "let" | "in" | "if" | "then" | "else" | "match" | "type"
            | "import" | "module" | "export" | "effect" | "perform"
            | "handle" | "with" | "resume" | "foreign" | "link" ;
